--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       display: table;
       background: #e8eaec;
       padding: 20px 20px 20px 20px;
-      border: 1px dashed black;
+      border: 1px dashed rgb(0, 136, 68);
       border-radius: 10px;
       margin: 0px auto auto auto;
     }
